# geo-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scrapy.cfg
geo/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
geo/spiders/: adverts.py  authentication.py  dealings.py  establishments.py  finders.py  infographics.py  lands.py  reports.py  thresholds.py
services/: reporter.py  utils.py
